@@ -25,6 +25,12 @@ requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Tags-HTML-DefinitionList/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Tags-HTML-DefinitionList';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Tags-HTML-DefinitionList';
+test_requires 'CSS::Struct::Output::Structure' => 0;
+test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0;
+test_requires 'Tags::HTML::DefinitionList' => 0;
+test_requires 'Tags::Output::Structure' => 0;
+test_requires 'Test::MockObject' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
