@@ -1,5 +1,6 @@
 0.02
  - Add check for 'css_class' parameter.
+ - Add constructor tests.
 
 0.01 2024-04-27T13:21:44+02:00
  - First version.
